Añadiendo el front end simple
EL ultimo front end que mandaron por medio de whatsapp

--- a/FrontEndCVMatchMaking/src/app/app.component.html
+++ b/FrontEndCVMatchMaking/src/app/app.component.html
@@ -178,6 +178,12 @@
 </style>
 
 <main class="main">
+  <div style="text-align:center; margin-top: 50px;">
+  <button routerLink="/subir">Subir Empleo</button>
+  <button routerLink="/eliminar">Eliminar Empleo</button>
+</div>
+<router-outlet></router-outlet>
+
   <div class="content">
     <div class="left-side">
       <svg
